--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     id="banner"
   />
   <section>
-    <!-- this is only relevant if we use the sharepoint 
+     this is only relevant if we use the sharepoint 
     <button id="searchcofa">
       <a
         href="https://gfschemicals.sharepoint.com/sites/CertificateofAnalysis/Shared%20Documents/Forms/AllItems.aspx?ovuser=3d876f81%2Dfbb1%2D4c0d%2D9b6a%2Ddf1b128ee7b7%2Crmace%40GFSChemicals%2Ecom&OR=Teams%2DHL&CT=1725470136543&clickparams=eyJBcHBOYW1lIjoiVGVhbXMtRGVza3RvcCIsIkFwcFZlcnNpb24iOiI1MC8yNDA3MTEyODgyNSIsIkhhc0ZlZGVyYXRlZFVzZXIiOmZhbHNlfQ%3D%3D"
@@ -106,7 +106,7 @@
         id="linkofcofa"
         >Certificate of Analysis Search</a
       >
-    </button> -->
+    </button> 
 
     <div class="chartPPT">
       <button onclick="topFunction()" id="myBtn" title="Go to top">
